# zte-cpe-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
data/: .gitignore
data/gt5s/: gt5s_app.js  gt5s_login.js  gt5s_main.js  gt5s_service_helper.js  gt5s_service_rpc.js  gt5s_util.js
data/mf289f/: get_command_set.txt
src/: bands.rs  commands.rs  lib.rs  main.rs  tests.rs  util.rs
src/cli/: args.rs  mod.rs  run.rs
src/commands/: auth.rs  device.rs  dhcp.rs  dmz.rs  mod.rs  network.rs  update.rs  upnp.rs  wifi.rs
src/g5ts/: mod.rs  tests.rs
src/g5ts/commands/: apn.rs  device.rs  mod.rs  network.rs  sms.rs
src/gt5s/: mod.rs  tests.rs
src/gt5s/commands/: auth.rs  mod.rs  router.rs
src/mf289f/: mod.rs  tests.rs
src/mf289f/commands/: auth.rs  mod.rs  network.rs  wifi.rs
