[package]
name = "zte-cpe-rs"
description = "Control ZTE MF289F LTE CPE using Rust"
authors = ["1zuna <marco@ccbluex.net>"]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
license-file = "LICENSE"
repository = "https://github.com/1zun4/zte-cpe-rs/"
categories = ["api-bindings"]
keywords = ["router", "zte", "api", "mf289f"]

[dependencies]
log = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha256 = "1.5.0"
md5 = "0.7.0"
anyhow = "1.0"
serde_urlencoded = "0.7.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = [ ]

# SSL support with native-tls or rustls
ssl-native = ["reqwest/native-tls"]
ssl-rustls = ["reqwest/rustls-tls"]
