[package]
name = "zte-cpe-rs"
description = "Control ZTE MF289F and GT5S LTE/5G CPE using Rust"
authors = ["Izuna <izuna.seikatsu@ccbluex.net>"]
version = "0.2.1"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/1zun4/zte-cpe-rs/"
categories = ["api-bindings"]
keywords = ["router", "zte", "api", "mf289f", "gt5s"]

[[bin]]
name = "zte-cpe-rs"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
log = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha256 = "1.5.0"
md5 = "0.7.0"
anyhow = "1.0"
serde_urlencoded = "0.7.1"
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
aes-gcm = "0.10"
rsa = "0.9"
base64 = "0.22"
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = ["tls-rustls", "mf289f", "gt5s"]
cli = ["dep:clap", "dep:tokio"]

# Router model support
mf289f = []
gt5s = []

# SSL support with native-tls or rustls
tls-native = ["reqwest/native-tls"]
tls-rustls = ["reqwest/rustls-tls"]
